Fixed header spacing

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Sinensis
 Theme URI: https://raphaelmp.com/sinensis/
 Author: Raphaël Marquis-Pelletier
-Author URI: https://raphaelmp.com/sinensis/
+Author URI: https://raphaelmp.com/
 Description: Description
 Version: 1.0.0
 License: GNU General Public License v2 or later
@@ -65,6 +65,11 @@ header {
 
 #separateur-header {
   color: #858585;
+  margin-bottom: 50px;
+}
+
+#\#separateur-header {
+	margin-bottom: 50px;
 }
 
 body {
@@ -381,6 +386,8 @@ bigger {
   font-size: 30pt;
   font-weight: normal;
   margin: 0px;
+  line-height: normal;
+
 }
 
 .site-description {
@@ -395,6 +402,8 @@ bigger {
 
 .article-header-text {
   color: #525252;
+	margin: 0px;
+	line-height: normal;
 }
 
 .article-header-author {
@@ -417,7 +426,7 @@ body {
 	background: #fff; /* Fallback for when there is no custom background color defined. */
 }
 
-.page {
+#page {
   padding-left: 50px;
   padding-right: 50px;
 }
@@ -732,14 +741,36 @@ a:active {
 # Content
 --------------------------------------------------------------*/
 
-#content h3,p{
+#main {
   padding-left: 50px;
   padding-right: 50px;
 }
 
-#content .big-image,.side-image{
+#main .big-image,.side-image{
   width: 100%;
 }
+
+/*
+#content {
+	background-color: blue;
+}
+
+#main header, .entry-content p:not(.wp-caption), .entry-content p:not(.alignright){
+  padding-left: 50px;
+  padding-right: 50px;
+	background-color:orange;
+}
+
+#main .big-image,.side-image{
+  width: 100%;
+}
+
+#main .entry-content p img.size-full {
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+}
+*/
 
 .entry-title a{
   text-decoration: none;
@@ -820,6 +851,7 @@ iframe,
 object {
 	max-width: 100%;
 }
+
 
 /*--------------------------------------------------------------
 ## Captions
